log
Thu, Mar 20, 2025  5:20:41 PM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Thu, Mar 20, 2025  5:44:57 PM: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:49:32: error: invalid application of 'sizeof' to incomplete type 'List {aka struct List}'
       L = (List*)malloc(sizeof(List));
                                ^~~~
exercises.c:50:7: error: implicit declaration of function 'pushfront' [-Werror=implicit-function-declaration]
       pushfront(L,lista[k]);
       ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
95b9cc4
Thu, Mar 20, 2025  5:46:47 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:49:32: error: invalid application of 'sizeof' to incomplete type 'List {aka struct List}'
       L = (List*)malloc(sizeof(List));
                                ^~~~
exercises.c:50:7: error: implicit declaration of function 'pushfront' [-Werror=implicit-function-declaration]
       pushfront(L,&k);
       ^~~~~~~~~
exercises.c:46:8: error: unused variable 'lista' [-Werror=unused-variable]
    int lista[10] = {1,2,3,4,5,6,7,8,9,10};
        ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
e738d89
Thu, Mar 20, 2025  5:51:19 PM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:49:32: error: invalid application of 'sizeof' to incomplete type 'List {aka struct List}'
       L = (List*)malloc(sizeof(List));
                                ^~~~
exercises.c:50:7: error: implicit declaration of function 'pushfront' [-Werror=implicit-function-declaration]
       pushfront(L,&lista[k]);
       ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
0f3abba
Thu, Mar 20, 2025  5:53:04 PM: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:49:32: error: invalid application of 'sizeof' to incomplete type 'List {aka struct List}'
       L = (List*)malloc(sizeof(List));
                                ^~~~
exercises.c:50:7: error: implicit declaration of function 'pushfront' [-Werror=implicit-function-declaration]
       pushfront(L,k);
       ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
b7b965c
Thu, Mar 20, 2025  5:54:28 PM: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:49:39: error: invalid application of 'sizeof' to incomplete type 'List {aka struct List}'
       int* dato = (int*)malloc(sizeof(List));
                                       ^~~~
exercises.c:51:7: error: implicit declaration of function 'pushfront' [-Werror=implicit-function-declaration]
       pushfront(L,dato);
       ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
241d93d
Thu, Mar 20, 2025  5:56:05 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:51:7: error: implicit declaration of function 'pushfront' [-Werror=implicit-function-declaration]
       pushfront(L,dato);
       ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
b0a6ae5
Thu, Mar 20, 2025  5:58:01 PM: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:50:7: error: implicit declaration of function 'pushfront' [-Werror=implicit-function-declaration]
       pushfront(L,dato);
       ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
7dea7e0
Thu, Mar 20, 2025  6:17:09 PM: 
 exercises.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:50:7: error: implicit declaration of function 'pushfront' [-Werror=implicit-function-declaration]
       pushfront(L,dato);
       ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
b4442af
Fri, Mar 21, 2025  6:28:48 PM: 
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:50:7: error: implicit declaration of function 'pushfront' [-Werror=implicit-function-declaration]
       pushfront(L,dato);
       ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
c4ef8fd
Fri, Mar 21, 2025  6:28:51 PM: 
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:50:7: error: implicit declaration of function 'pushfront' [-Werror=implicit-function-declaration]
       pushfront(L,dato);
       ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
6a40a94
Fri, Mar 21, 2025  6:28:56 PM: 
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:50:7: error: implicit declaration of function 'pushfront' [-Werror=implicit-function-declaration]
       pushfront(L,dato);
       ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
eaa149c
Fri, Mar 21, 2025  6:29:36 PM: 
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:50:7: error: implicit declaration of function 'pushfront' [-Werror=implicit-function-declaration]
       pushfront(L,dato);
       ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
77d951d
Fri, Mar 21, 2025  6:29:55 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
1f7ca08
Fri, Mar 21, 2025  6:52:11 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
b29bf21
Fri, Mar 21, 2025  7:05:48 PM: 
 exercises.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'eliminaElementos':
exercises.c:87:14: error: comparison between pointer and integer [-Werror]
       if(dato==elem)
              ^~
cc1.exe: all warnings being treated as errors
Compilation failed
299c202
Fri, Mar 21, 2025  7:06:22 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
19e87fa
Fri, Mar 21, 2025  7:11:00 PM: 
 exercises.c | 9 +--------
 1 file changed, 1 insertion(+), 8 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'eliminaElementos':
exercises.c:84:9: error: unused variable 'dato' [-Werror=unused-variable]
    int* dato = first(L);
         ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
550b9f5
Fri, Mar 21, 2025  7:11:15 PM: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  2|3
total_score: 20/70
f3b8d9f
Fri, Mar 21, 2025  7:19:25 PM: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'eliminaElementos':
exercises.c:87:12: error: dereferencing pointer to incomplete type 'List {aka struct List}'
       if (L->current == elem)
            ^~
Compilation failed
d6265cc
Fri, Mar 21, 2025  7:22:39 PM: 
 exercises.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'eliminaElementos':
exercises.c:88:16: error: comparison between pointer and integer [-Werror]
       if (dato == elem)
                ^~
cc1.exe: all warnings being treated as errors
Compilation failed
44e4835
Fri, Mar 21, 2025  7:22:50 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 40/70
54502aa
Fri, Mar 21, 2025  7:23:23 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
df411a4
Fri, Mar 21, 2025  7:24:05 PM: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
4d352b3
Fri, Mar 21, 2025  7:24:27 PM: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  2|3
total_score: 20/70
752f464
Fri, Mar 21, 2025  7:25:46 PM: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'eliminaElementos':
exercises.c:87:13: error: comparison between pointer and integer [-Werror]
       if (L == elem)
             ^~
cc1.exe: all warnings being treated as errors
Compilation failed
54372ed
Fri, Mar 21, 2025  7:39:30 PM: 
 exercises.c | 9 +++------
 1 file changed, 3 insertions(+), 6 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'eliminaElementos':
exercises.c:88:16: error: comparison between pointer and integer [-Werror]
       if (dato == elem)
                ^~
cc1.exe: all warnings being treated as errors
Compilation failed
aa75e9d
Fri, Mar 21, 2025  7:39:37 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
030e284
